[package]
name = "whi_hdk_extensions"
version = "0.5.0"
authors = ["Matthew Brisebois <matthew@webheroes.ca>"]
edition = "2018"
license = "CAL-1.0"
repository = "https://github.com/mjbrisebois/rust-hdk-extensions"
description = "Code that works in tandem or is complimentary to the Holochain `hdk` crate"
readme = "README.md"

[lib]
name = "hdk_extensions"

[dependencies]
hdk = "0.3.0-beta-dev.34"
serde = "1"
thiserror = "1"
# whi_hdi_extensions = { path = "../whi_hdi_extensions" }
whi_hdi_extensions = { git = "https://github.com/mjbrisebois/rust-hdi-extensions.git", rev = "c7ec5e1547a9dd3a87bf90e9677521daa643e5ee" }
